src/test/ui/issues/issue-2995.stderr
error[E0605]: non-primitive cast: `*const isize` as `&isize`
  --> $DIR/issue-2995.rs:2:22
   |
LL |     let _q: &isize = p as &isize;
   |                      ^^^^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
